# EyevinnWASM

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.wasm  spin.toml
src/: image_ops.rs  lib.rs
web/: app.js  index.html  package.json  server.js  styles.css
