[package]
name = "pixel-art-generator"
version = "0.1.0"
edition = "2021"
description = "WASM-based HTTP service that pixelates images into 8-bit style PNGs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "5.2.0"
url = "2.5"
